# external-sorting

./: CMakeLists.txt  README.md  data.txt  main.cpp  parser.cpp  parser.h  sort.cpp  sort.h
